# cookiecutter_templates

./: .gitignore  README.md  cookiecutter.json  pyproject.toml  ruff.toml  ty.toml
hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
tests/: test_project_creation.py
{{ cookiecutter.repo_name }}/: .gitignore  README.md  calculate_hours.py  environment.yml  main.py  pyproject.toml
{{ cookiecutter.repo_name }}/.github/: copilot-instructions.md
{{ cookiecutter.repo_name }}/.github/agents/: ProjectCustomAgent.agent.md
{{ cookiecutter.repo_name }}/.github/workflows/: build-report.yml  type-checking.yaml
{{ cookiecutter.repo_name }}/configs/: __init__.py  project_configs.py
{{ cookiecutter.repo_name }}/notebooks/: exploratory_analysis.ipynb  template.ipynb
{{ cookiecutter.repo_name }}/report/: report.tex
{{ cookiecutter.repo_name }}/src/: __init__.py  project_configs.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/: __init__.py  project_configs.py
