[project]
name = "personal-cookiecutter-templates"
version = "1.0.0"
description = "A collection of personal cookiecutter templates for data science projects."
authors = [
    { name = "Giuseppe Minardi", email = "giuseppe.minardi95@gmail.com" },
]
readme = "README.md"
keywords = ["statistics", "analysis", "data-science"]
