[project]
name = "personal-cookiecutter-templates"
version = "1.0.0"
description = "A collection of personal cookiecutter templates for data science projects."
authors = [
    { name = "Giuseppe Minardi", email = "giuseppe.minardi95@gmail.com" },
]
readme = "README.md"
keywords = ["statistics", "analysis", "data-science"]
dependencies = [
    "cookiecutter>=2.6.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.ty.src]
exclude = [
    "notebooks",
]